--- a/.classpath
+++ b/.classpath
@@ -37,5 +37,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/RS232"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
